--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -34,7 +34,11 @@
           </form>
           </div>
         <% }) %>
+        <form action="/authors/new" method="GET">
+            <input type="submit" value="New Author">
+      </form>
       </div><!-- col-md-8 -->
+      
     </div><!-- end row --> 
        
     </div><!-- end div fluid -->
