--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -38,6 +38,9 @@
           </form>
         </div>
         <% }) %>
+        <form action="/books/new" method="GET">
+            <input type="submit" value="New Books">
+        </form>
       </div><!-- end col-md-8 -->
     </div><!-- end row -->
        
