--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,13 +18,13 @@ ul {
 li a {
     display: block;
     color: #000;
-    padding: 60px 60px 60px 60px;
+    padding: 200px 70px 200px 70px;
     text-decoration: none;
     font-size: 30px;
 }
 
 li a.active {
-    background-color: #4CAF50;
+    background-color: #ff9933;
     color: white;
 }
 
