--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
     <div class="row">
       <div class="col-xs-6">
-        <img src="/images/images.jpeg"  style="width:500px;height:500px;"/><h2><a href="/authors"> Authors</a></h2>
+        <img src="/images/authors.gif"  style="width:500px;height:500px;"/><h2><a href="/authors"> Authors</a></h2>
       </div>
       <div class="col-xs-6">
         <img src="/images/brain-books.jpg" style="width:500px;height:500px;" /><h2><a href="/books">Books</a></h2>
